--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,9 @@
+
 .App {
   text-align: center;
+  margin-top: 15px;
 }
 
-.red{
-  color: red;
-}
-.blue{
-  color: blue;
-}
-.explain{
+.left{
   text-align: left;
 }
